# Numerical-Methods---Protein-folding

./: CMakeLists.txt  HP_model.cpp  HP_model.h  README.md  Vec3.h  flake.nix  hp_folding
Header/: HP_model.h  Vec3.h
Main/: HP_model.cpp  main.cpp
Python/: animate_folding.py  plot_energy.py
